--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,16 @@
-.App {
-  text-align: center;
+.notif-icon {
+  cursor: pointer;
+  position: relative;
+  font-size: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.badge {
+  position: absolute;
+  top: -5px;
+  right: -10px;
+  background: red;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 2px 6px;
+  border-radius: 50%;
+  font-size: 12px;
 }
